--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
+    "react-spinners": "^0.17.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
