--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@editorjs/table": "^2.4.5",
     "@editorjs/underline": "^1.2.1",
     "@hookform/resolvers": "^5.2.2",
+    "@tailwindcss/typography": "^0.5.19",
+    "@uiw/react-md-editor": "^4.0.11",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
     "dotenv": "^17.3.1",
     "editorjs-drag-drop": "^1.1.16",
     "editorjs-undo": "^2.0.28",
+    "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.1.0",
     "mongoose": "^9.2.1",
@@ -36,7 +39,10 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
+    "react-markdown": "^10.1.0",
     "react-spinners": "^0.17.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
